fixed alignment

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container {
+  width: 50%;
+  margin-right: auto;
+  margin-left: auto;
+}
